<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hwcom_module</name>
  <version>1.0.0</version>
  <description>Communication Library between ROS2 and Hardware, developping for shipcon</description>
  <maintainer email="suisei_wada@naoe.eng.osaka-u.ac.jp">Suisei WADA</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
